// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the pagination component: currentPage={1} totalPages={1} 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders the pagination component: currentPage={1} totalPages={9} 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <span
          class=""
        >
          &lt; Prev
        </span>
        <div>
          <a
            aria-label="Page 1"
            class=""
          >
            1
          </a>
          <a
            aria-label="Page 2"
          >
            2
          </a>
          <a
            aria-label="Page 3"
          >
            3
          </a>
          <a
            aria-label="Page 4"
          >
            4
          </a>
          <a
            aria-label="Page 5"
          >
            5
          </a>
          <a
            aria-label="Page 6"
          >
            6
          </a>
          <a
            aria-label="Page 7"
          >
            7
          </a>
          <a
            aria-label="Page 8"
          >
            8
          </a>
          <a
            aria-label="Page 9"
          >
            9
          </a>
        </div>
        <a
          class=""
        >
          Next &gt;
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <span
        class=""
      >
        &lt; Prev
      </span>
      <div>
        <a
          aria-label="Page 1"
          class=""
        >
          1
        </a>
        <a
          aria-label="Page 2"
        >
          2
        </a>
        <a
          aria-label="Page 3"
        >
          3
        </a>
        <a
          aria-label="Page 4"
        >
          4
        </a>
        <a
          aria-label="Page 5"
        >
          5
        </a>
        <a
          aria-label="Page 6"
        >
          6
        </a>
        <a
          aria-label="Page 7"
        >
          7
        </a>
        <a
          aria-label="Page 8"
        >
          8
        </a>
        <a
          aria-label="Page 9"
        >
          9
        </a>
      </div>
      <a
        class=""
      >
        Next &gt;
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders the pagination component: currentPage={5} totalPages={9} 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <a
          class=""
        >
          &lt; Prev
        </a>
        <div>
          <a
            aria-label="Page 1"
          >
            1
          </a>
          <a
            aria-label="Page 2"
          >
            2
          </a>
          <a
            aria-label="Page 3"
          >
            3
          </a>
          <a
            aria-label="Page 4"
          >
            4
          </a>
          <a
            aria-label="Page 5"
            class=""
          >
            5
          </a>
          <a
            aria-label="Page 6"
          >
            6
          </a>
          <a
            aria-label="Page 7"
          >
            7
          </a>
          <a
            aria-label="Page 8"
          >
            8
          </a>
          <a
            aria-label="Page 9"
          >
            9
          </a>
        </div>
        <a
          class=""
        >
          Next &gt;
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <a
        class=""
      >
        &lt; Prev
      </a>
      <div>
        <a
          aria-label="Page 1"
        >
          1
        </a>
        <a
          aria-label="Page 2"
        >
          2
        </a>
        <a
          aria-label="Page 3"
        >
          3
        </a>
        <a
          aria-label="Page 4"
        >
          4
        </a>
        <a
          aria-label="Page 5"
          class=""
        >
          5
        </a>
        <a
          aria-label="Page 6"
        >
          6
        </a>
        <a
          aria-label="Page 7"
        >
          7
        </a>
        <a
          aria-label="Page 8"
        >
          8
        </a>
        <a
          aria-label="Page 9"
        >
          9
        </a>
      </div>
      <a
        class=""
      >
        Next &gt;
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders the pagination component: currentPage={5} totalPages={10} 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <a
          class=""
        >
          &lt; Prev
        </a>
        <div>
          <a
            aria-label="Page 1"
          >
            1
          </a>
          <a
            aria-label="Page 2"
          >
            2
          </a>
          <a
            aria-label="Page 3"
          >
            3
          </a>
          <a
            aria-label="Page 4"
          >
            4
          </a>
          <a
            aria-label="Page 5"
            class=""
          >
            5
          </a>
          ...
          <a
            aria-label="Page 9"
          >
            9
          </a>
          <a
            aria-label="Page 10"
          >
            10
          </a>
        </div>
        <a
          class=""
        >
          Next &gt;
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <a
        class=""
      >
        &lt; Prev
      </a>
      <div>
        <a
          aria-label="Page 1"
        >
          1
        </a>
        <a
          aria-label="Page 2"
        >
          2
        </a>
        <a
          aria-label="Page 3"
        >
          3
        </a>
        <a
          aria-label="Page 4"
        >
          4
        </a>
        <a
          aria-label="Page 5"
          class=""
        >
          5
        </a>
        ...
        <a
          aria-label="Page 9"
        >
          9
        </a>
        <a
          aria-label="Page 10"
        >
          10
        </a>
      </div>
      <a
        class=""
      >
        Next &gt;
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders the pagination component: currentPage={5} totalPages={15} 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <a
          class=""
        >
          &lt; Prev
        </a>
        <div>
          <a
            aria-label="Page 1"
          >
            1
          </a>
          <a
            aria-label="Page 2"
          >
            2
          </a>
          <a
            aria-label="Page 3"
          >
            3
          </a>
          <a
            aria-label="Page 4"
          >
            4
          </a>
          <a
            aria-label="Page 5"
            class=""
          >
            5
          </a>
          ...
          <a
            aria-label="Page 14"
          >
            14
          </a>
          <a
            aria-label="Page 15"
          >
            15
          </a>
        </div>
        <a
          class=""
        >
          Next &gt;
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <a
        class=""
      >
        &lt; Prev
      </a>
      <div>
        <a
          aria-label="Page 1"
        >
          1
        </a>
        <a
          aria-label="Page 2"
        >
          2
        </a>
        <a
          aria-label="Page 3"
        >
          3
        </a>
        <a
          aria-label="Page 4"
        >
          4
        </a>
        <a
          aria-label="Page 5"
          class=""
        >
          5
        </a>
        ...
        <a
          aria-label="Page 14"
        >
          14
        </a>
        <a
          aria-label="Page 15"
        >
          15
        </a>
      </div>
      <a
        class=""
      >
        Next &gt;
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders the pagination component: currentPage={7} totalPages={15} 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <a
          class=""
        >
          &lt; Prev
        </a>
        <div>
          <a
            aria-label="Page 1"
          >
            1
          </a>
          <a
            aria-label="Page 2"
          >
            2
          </a>
          ...
          <a
            aria-label="Page 6"
          >
            6
          </a>
          <a
            aria-label="Page 7"
            class=""
          >
            7
          </a>
          <a
            aria-label="Page 8"
          >
            8
          </a>
          ...
          <a
            aria-label="Page 14"
          >
            14
          </a>
          <a
            aria-label="Page 15"
          >
            15
          </a>
        </div>
        <a
          class=""
        >
          Next &gt;
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <a
        class=""
      >
        &lt; Prev
      </a>
      <div>
        <a
          aria-label="Page 1"
        >
          1
        </a>
        <a
          aria-label="Page 2"
        >
          2
        </a>
        ...
        <a
          aria-label="Page 6"
        >
          6
        </a>
        <a
          aria-label="Page 7"
          class=""
        >
          7
        </a>
        <a
          aria-label="Page 8"
        >
          8
        </a>
        ...
        <a
          aria-label="Page 14"
        >
          14
        </a>
        <a
          aria-label="Page 15"
        >
          15
        </a>
      </div>
      <a
        class=""
      >
        Next &gt;
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders the pagination component: currentPage={9} totalPages={9} 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <a
          class=""
        >
          &lt; Prev
        </a>
        <div>
          <a
            aria-label="Page 1"
          >
            1
          </a>
          <a
            aria-label="Page 2"
          >
            2
          </a>
          <a
            aria-label="Page 3"
          >
            3
          </a>
          <a
            aria-label="Page 4"
          >
            4
          </a>
          <a
            aria-label="Page 5"
          >
            5
          </a>
          <a
            aria-label="Page 6"
          >
            6
          </a>
          <a
            aria-label="Page 7"
          >
            7
          </a>
          <a
            aria-label="Page 8"
          >
            8
          </a>
          <a
            aria-label="Page 9"
            class=""
          >
            9
          </a>
        </div>
        <span
          class=""
        >
          Next &gt;
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <a
        class=""
      >
        &lt; Prev
      </a>
      <div>
        <a
          aria-label="Page 1"
        >
          1
        </a>
        <a
          aria-label="Page 2"
        >
          2
        </a>
        <a
          aria-label="Page 3"
        >
          3
        </a>
        <a
          aria-label="Page 4"
        >
          4
        </a>
        <a
          aria-label="Page 5"
        >
          5
        </a>
        <a
          aria-label="Page 6"
        >
          6
        </a>
        <a
          aria-label="Page 7"
        >
          7
        </a>
        <a
          aria-label="Page 8"
        >
          8
        </a>
        <a
          aria-label="Page 9"
          class=""
        >
          9
        </a>
      </div>
      <span
        class=""
      >
        Next &gt;
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders the pagination component: currentPage={10} totalPages={10} 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <a
          class=""
        >
          &lt; Prev
        </a>
        <div>
          <a
            aria-label="Page 1"
          >
            1
          </a>
          <a
            aria-label="Page 2"
          >
            2
          </a>
          <a
            aria-label="Page 3"
          >
            3
          </a>
          <a
            aria-label="Page 4"
          >
            4
          </a>
          <a
            aria-label="Page 5"
          >
            5
          </a>
          ...
          <a
            aria-label="Page 9"
          >
            9
          </a>
          <a
            aria-label="Page 10"
            class=""
          >
            10
          </a>
        </div>
        <span
          class=""
        >
          Next &gt;
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <a
        class=""
      >
        &lt; Prev
      </a>
      <div>
        <a
          aria-label="Page 1"
        >
          1
        </a>
        <a
          aria-label="Page 2"
        >
          2
        </a>
        <a
          aria-label="Page 3"
        >
          3
        </a>
        <a
          aria-label="Page 4"
        >
          4
        </a>
        <a
          aria-label="Page 5"
        >
          5
        </a>
        ...
        <a
          aria-label="Page 9"
        >
          9
        </a>
        <a
          aria-label="Page 10"
          class=""
        >
          10
        </a>
      </div>
      <span
        class=""
      >
        Next &gt;
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders the pagination component: currentPage={10} totalPages={15} 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <a
          class=""
        >
          &lt; Prev
        </a>
        <div>
          <a
            aria-label="Page 1"
          >
            1
          </a>
          <a
            aria-label="Page 2"
          >
            2
          </a>
          ...
          <a
            aria-label="Page 9"
          >
            9
          </a>
          <a
            aria-label="Page 10"
            class=""
          >
            10
          </a>
          <a
            aria-label="Page 11"
          >
            11
          </a>
          ...
          <a
            aria-label="Page 14"
          >
            14
          </a>
          <a
            aria-label="Page 15"
          >
            15
          </a>
        </div>
        <a
          class=""
        >
          Next &gt;
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <a
        class=""
      >
        &lt; Prev
      </a>
      <div>
        <a
          aria-label="Page 1"
        >
          1
        </a>
        <a
          aria-label="Page 2"
        >
          2
        </a>
        ...
        <a
          aria-label="Page 9"
        >
          9
        </a>
        <a
          aria-label="Page 10"
          class=""
        >
          10
        </a>
        <a
          aria-label="Page 11"
        >
          11
        </a>
        ...
        <a
          aria-label="Page 14"
        >
          14
        </a>
        <a
          aria-label="Page 15"
        >
          15
        </a>
      </div>
      <a
        class=""
      >
        Next &gt;
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders the pagination component: currentPage={11} totalPages={15} 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <a
          class=""
        >
          &lt; Prev
        </a>
        <div>
          <a
            aria-label="Page 1"
          >
            1
          </a>
          <a
            aria-label="Page 2"
          >
            2
          </a>
          ...
          <a
            aria-label="Page 10"
          >
            10
          </a>
          <a
            aria-label="Page 11"
            class=""
          >
            11
          </a>
          <a
            aria-label="Page 12"
          >
            12
          </a>
          ...
          <a
            aria-label="Page 14"
          >
            14
          </a>
          <a
            aria-label="Page 15"
          >
            15
          </a>
        </div>
        <a
          class=""
        >
          Next &gt;
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <a
        class=""
      >
        &lt; Prev
      </a>
      <div>
        <a
          aria-label="Page 1"
        >
          1
        </a>
        <a
          aria-label="Page 2"
        >
          2
        </a>
        ...
        <a
          aria-label="Page 10"
        >
          10
        </a>
        <a
          aria-label="Page 11"
          class=""
        >
          11
        </a>
        <a
          aria-label="Page 12"
        >
          12
        </a>
        ...
        <a
          aria-label="Page 14"
        >
          14
        </a>
        <a
          aria-label="Page 15"
        >
          15
        </a>
      </div>
      <a
        class=""
      >
        Next &gt;
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders the pagination component: currentPage={14} totalPages={15} 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <a
          class=""
        >
          &lt; Prev
        </a>
        <div>
          <a
            aria-label="Page 1"
          >
            1
          </a>
          <a
            aria-label="Page 2"
          >
            2
          </a>
          <a
            aria-label="Page 3"
          >
            3
          </a>
          <a
            aria-label="Page 4"
          >
            4
          </a>
          <a
            aria-label="Page 5"
          >
            5
          </a>
          ...
          <a
            aria-label="Page 14"
            class=""
          >
            14
          </a>
          <a
            aria-label="Page 15"
          >
            15
          </a>
        </div>
        <a
          class=""
        >
          Next &gt;
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <a
        class=""
      >
        &lt; Prev
      </a>
      <div>
        <a
          aria-label="Page 1"
        >
          1
        </a>
        <a
          aria-label="Page 2"
        >
          2
        </a>
        <a
          aria-label="Page 3"
        >
          3
        </a>
        <a
          aria-label="Page 4"
        >
          4
        </a>
        <a
          aria-label="Page 5"
        >
          5
        </a>
        ...
        <a
          aria-label="Page 14"
          class=""
        >
          14
        </a>
        <a
          aria-label="Page 15"
        >
          15
        </a>
      </div>
      <a
        class=""
      >
        Next &gt;
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
